--- a/mit-mern-week-9/08_map_heatmap.html
+++ b/mit-mern-week-9/08_map_heatmap.html
@@ -28,13 +28,28 @@ var map = new mapboxgl.Map({
     zoom: 12
 });
 
+function dbh (type_of_crime) {
+    if (type_of_crime === "HOMICIDE") return 60;
+    if (type_of_crime === "CRIMINAL SEXUAL ASSAULT") return 54;
+    if (type_of_crime === "ROBBERY") return 48;
+    if (type_of_crime === "BATTERY") return 42;
+    if (type_of_crime === "PUBLIC PEACE VIOLATION") return 36;
+    if (type_of_crime === "ASSAULT") return 30;
+    if (type_of_crime === "STALKING") return 24;
+    if (type_of_crime === "THEFT") return 18;
+    if (type_of_crime === "BURGLARY") return 12;
+    if (type_of_crime === "RITUALISM") return 6;
+    else return 1;
+}
+
+
 map.on('load', function(){
     const crimes = [];
     chicago.data.forEach((crime, i) => {
         crimes.push({
             "type": "Feature",
             "properties":{
-                "dbh": (60 *(Math.random()))
+                "dbh": (dbh(crime[13]))
             },
             "geometry": {
                 "type": "Point",
@@ -44,20 +59,21 @@ map.on('load', function(){
     });
 
     const geojson = {
-        "type": "FeatureCollection", "features": crimes
+        "type": "FeatureCollection", 
+        "features": crimes
     }
 
     map.addSource('crime', {
-        'type' : 'geojson',
-        'data' : geojson
+        'type': 'geojson',
+        'data': geojson
     })
 
     map.addLayer(
             {
                 'id': 'crime-heat',
                 'type': 'heatmap',
-                'source': 'crimes',
-                'maxzoom': 15,
+                'source': 'crime',
+                'maxzoom': 20,
                 'paint': {
                     // Increase the heatmap weight based on frequency and property magnitude
                     'heatmap-weight': {
@@ -73,7 +89,7 @@ map.on('load', function(){
                     'heatmap-intensity': {
                         'stops': [
                         [11, 1],
-                        [15, 3]
+                        [20, 3]
                         ]
                     },
                     // Color ramp for heatmap.  Domain is 0 (low) to 1 (high).
@@ -100,16 +116,16 @@ map.on('load', function(){
                     'heatmap-radius': {
                         'stops': [
                             [11, 15],
-                            [15, 20]
+                            [20, 20]
                         ]
                     },
                     // Transition from heatmap to circle layer by zoom level
                     'heatmap-opacity': {
-                        'default' : 1,
+                        'default': 1,
                         'stops': [
                         [14, 1],
-                        [15, 0]
-                    ]
+                        [20, 0]
+                        ]
                     }
                 }
             },
