--- a/mit-mern-week-9/05_map_hello_world.html
+++ b/mit-mern-week-9/05_map_hello_world.html
@@ -5,6 +5,7 @@
     <title>Map</title>
     <script src="https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.js"></script>
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.css">
+    <script src="./data/keys.js"></script>
     <style>
         body { margin: 0; padding: 0;}
         #map {position: absolute; top: 0; bottom: 0; width: 100%;}
@@ -21,7 +22,7 @@ const position = navigator.geolocation.getCurrentPosition((position) => {
     const long = position.coords.longitude;
   });
 
-mapboxgl.accessToken = 'pk.eyJ1IjoiaW50dXRlY2lvIiwiYSI6ImNsMnhqa3FnZDA3OWUzam8wd3RyaHJnMjQifQ.BSfbphgu9dm2g8czPVJC9g';
+mapboxgl.accessToken = MTBA_API_Key;
 
 const map = new mapboxgl.Map ({
     container: 'map',
