--- a/mit-mern-week-9/06_map_markers.html
+++ b/mit-mern-week-9/06_map_markers.html
@@ -5,6 +5,7 @@
 <title>Map Marker</title>
 <script src="https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.js"></script>
 <link href="https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.css" rel="stylesheet" />
+<script src="../Keys/keys.js"></script>
 <style>
   body { margin: 0; padding: 0; }
   #map { position: absolute; top: 0; bottom: 0; width: 100%; }
@@ -16,7 +17,7 @@
  
 <script>
 
-    mapboxgl.accessToken = 'pk.eyJ1IjoiaW50dXRlY2lvIiwiYSI6ImNsMnhqa3FnZDA3OWUzam8wd3RyaHJnMjQifQ.BSfbphgu9dm2g8czPVJC9g';
+    mapboxgl.accessToken = MTBA_API_Key;
 
     var map = new mapboxgl.Map({
         container: 'map',
