--- a/mit-mern-week-9/09_map_animation.html
+++ b/mit-mern-week-9/09_map_animation.html
@@ -5,6 +5,7 @@
 <title>Add a default marker</title>
 <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
 <script src="https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.js"></script>
+<script src="../Keys/keys.js"></script>
 <link href="https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.css" rel="stylesheet" />
 <style>
   body { margin: 0; padding: 0; }
@@ -42,7 +43,7 @@ const busStops = [
   [-71.118625, 42.374863],
 ];
 
-mapboxgl.accessToken = 'pk.eyJ1IjoiaW50dXRlY2lvIiwiYSI6ImNsMnhqa3FnZDA3OWUzam8wd3RyaHJnMjQifQ.BSfbphgu9dm2g8czPVJC9g';
+mapboxgl.accessToken = MTBA_API_Key;
 
 var map = new mapboxgl.Map({
     container: 'map',
