--- a/mit-mern-week-9/10_real-time_bus_tracker.html
+++ b/mit-mern-week-9/10_real-time_bus_tracker.html
@@ -8,6 +8,7 @@
 
 	<script src="https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.js"></script>
 	<script src="./data/MBTA_Bus_Stops.geojson" ></script>    
+	<script src="../Keys/keys.js"></script>
 	<link href="https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.css" rel="stylesheet" />
 	<style>
 		body { margin: 0; padding: 0; }
@@ -29,7 +30,7 @@
 
 <script>
 
-mapboxgl.accessToken = 'pk.eyJ1IjoiaW50dXRlY2lvIiwiYSI6ImNsMnhqa3FnZDA3OWUzam8wd3RyaHJnMjQifQ.BSfbphgu9dm2g8czPVJC9g';
+mapboxgl.accessToken = MTBA_API_Key;
 
 const map = new mapboxgl.Map({
     container: 'map',
